<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Co Writing</string>
    <string name="init_message">Please Input Something</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>

    <string name="connect_menu">connect menu</string>

    <string name="tab_name">New Tab</string>
    <string name="send">send</string>
    <string name="pdf_visibility">PDF Layer</string>
    <string name="painter_visibility">Painter Layer</string>

    <string name="action_addtab">AddTab</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_painter">Painter Mode</string>

    <string name="bluetooth">bluetooth</string>
    <string name="bluetooth_discovery">Discovery Device</string>
    <string name="bluetooth_scan">Scan&#8230;</string>
    <string name="bluetooth_listdevice">Available Devices</string>
    <string name="bluetooth_createconnect">Create Connect&#8230;</string>
    <string name="bluetooth_waitconncet">Waiting someone add in&#8230;</string>

    <string name="bluetooth_client">client</string>
    <string name="bluetooth_server">server</string>
    
    <string name="bt_connect">via bluetooth</string>
    <string name="wifi_connect">via wifi</string>

    <!-- bluetooth test -->
    <string name="bluetooth_send12">Send 12</string>

    <!-- file chooser -->
    <string name="chooser_nofile">No File</string>

    <string name="painter_name">Painter</string>

    <string name="pick_color">Pick Color</string>
    <string name="emboss">Emboss</string>
    <string name="blur">Blur</string>
    <string name="erase">Erase</string>
    <string name="painter_size_sel">Set the Painter Size</string>
    
    <string name="book_shelf_title">Available books</string>
</resources>
