<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
   	xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/action_addtab"
        android:icon="@drawable/ic_queue_add"
        android:title="@string/action_addtab"
        android:showAsAction="always" />

    <item android:id="@+id/action_painter"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_painter"
        android:showAsAction="always" />

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_font"
        android:title="@string/action_search"
        android:showAsAction="always"
        android:actionProviderClass="com.example.co_reading.painting.BrushAction" />

    <!-- 
    <item android:id="@+id/action_bluetooth"
        android:icon="@drawable/ic_menu_share_holo_dark"
        android:title="@string/action_bluetooth"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:showAsAction="ifRoom"
        android:actionProviderClass="android.widget.ShareActionProvider" />
    -->
    
    <item android:id="@+id/connect_menu"
        android:icon="@drawable/ic_group"
        android:title="@string/connect_menu"
        android:showAsAction="ifRoom" >
        <menu >
            <item android:id="@+id/bt_connect"
                android:title="@+string/bt_connect"
                android:icon="@drawable/ic_bluetooth_search"
                android:onClick="onSort" />

            <item android:id="@+id/wifi_connect"
	            android:title="@+string/wifi_connect"	
                android:icon="@drawable/ic_network_wifi"
                android:onClick="onSort" />
        </menu>
    </item>

    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        android:showAsAction="ifRoom" />
</menu>
