<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="370dp"
    android:layout_height="400dp"
    android:background="@drawable/discoverydevice_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/discoverydevice_title_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/discoverydevice_title_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/discoverydevice_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/bluetooth_discovery"
            android:textColor="#888888"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/bluetooth_toggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="onClickToggle"
            android:textOff="@string/bluetooth_server"
            android:textOn="@string/bluetooth_client" />

    </LinearLayout>

	<RelativeLayout
	    android:id="@+id/dialog_container"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
    </RelativeLayout>

</LinearLayout>