<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/discoverydevice_bg"
    >
    
    <RelativeLayout 
        android:id="@+id/discoverydevice_title_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/discoverydevice_title_bg" >
        
        <TextView
            android:id="@+id/discoverydevice_title"
            android:text="@string/bluetooth_discovery"
            android:textSize="20sp"
            android:textColor="#888888"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_alignParentLeft="true" />
    
    </RelativeLayout>
     
    <Button
        android:id="@+id/discoverydevice_scanbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
		android:background="@drawable/discoverydevice_bg" 
        android:text="@string/bluetooth_scan" 
        android:textColor="#ffffff"
        />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/discoverydevice_subtitle_bg" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/bluetooth_listdevice"
            android:textColor="#888888"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progresscircle"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="200dp"
            android:layout_toRightOf="@+id/textView1"
            android:visibility="visible"
            />
    </RelativeLayout>
    
    <ListView
	        android:id="@+id/bluetooth_devicelist"
	        android:layout_width="match_parent"
	        android:layout_height="200dp" >
	</ListView>

</LinearLayout>